Adicionado paragrafo com descrição da página index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Pagina de exemplo</h1>
+
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nam consequatur illo doloremque fugiat neque cumque odio inventore excepturi facere. Nulla similique dolorem quo consectetur sunt ad delectus suscipit ipsa!</p>
 </body>
 </html>
