Criado a terceira pagina linkada com o arquivo .css e feito ajuste na cor das paginas

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Pagina de exemplo</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
+<body id="ind">
     <h1>Pagina de exemplo</h1>
     <a href="pagina.html">Página dois</a>
-
+    <a href="contato.html">Contato</a>
+    <a href="index.html">Index</a>
+    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut nam consequatur illo doloremque fugiat neque cumque odio inventore excepturi facere. Nulla similique dolorem quo consectetur sunt ad delectus suscipit ipsa!</p>
 
     <h2>Continuação da página</h2>
