--- a/pagina.html
+++ b/pagina.html
@@ -7,7 +7,10 @@
     <title>Pagina dois</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
+<body id="pag1">
+    <a href="pagina.html">Página dois</a>
+    <a href="contato.html">Contato</a>
+    <a href="index.html">Index</a>
      <h1>Esta é a página dois</h1>
     
 
